# VapourSynth-FFT3DFilter

./: FFT3DFilter.cpp  FFT3DFilter.h  FFT3DFilterTransform.cpp  Plugin.cpp  meson.build
.github/workflows/: build.yaml
